Fix z-index to play nicer with some popular browser extensions

--- a/src/components/featured-card/featured-card.scss
+++ b/src/components/featured-card/featured-card.scss
@@ -7,6 +7,7 @@
 	margin-bottom: $spacing-s;
 	min-height: 56.25vw;
 	position: relative;
+	z-index: 1;
 	@media (min-aspect-ratio: 16/10) {
 		min-height: 85vh;
 	}
